# servicebay

./: .dependency-cruiser.cjs  .diff-coverage.json  .gitignore  .release-please-manifest.json  .semgrep.yml  ARCHITECTURE.md  ARCHITECTURE_V4_PROPOSAL.md  CHANGELOG.md  CHANGELOG_DEV.md  CLAUDE.md  DESIGN_PRINCIPLES.md  DISCOVERY_IMPLEMENTATION_COMPLETE.md  DISCOVERY_IMPROVEMENTS.md  DISCOVERY_LOG_GUIDE.md  DISCOVERY_SOLUTION_COMPLETE.md  Dockerfile  Dockerfile.base  Dockerfile.dev  EXECUTION_CONTEXT_FIX.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_STATUS.md  PHASE_6_UI_INTEGRATION.md  PYTHON_IMPORT_FIX.md  QUADLET_PARSER_USAGE.md  README.md  README_UPDATES_SUMMARY.md  RELEASE.md  ROADMAP_v3.md  WHERE_REQUIRES_IS_PARSED.md  agent_output.json  debug-discovery.ts  eslint.config.mjs  generate_token.ts  install-fedora-coreos.sh  install-sb-tui.sh  install-sb.sh  install.sh  middleware.ts  next.config.ts  package-lock.json  (+11 more)
.antigravitycli/: d012c88e-7474-476d-ad49-afc8c26ae217.json  instructions.md
.github/: copilot-instructions.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push
.serena/: project.yml
.storybook/: main.ts  preview.tsx
assists/: create-service.md  data-authority.md  delegated-admin-mint-server-to-server.md  footgun-cross-service-uid-writes.md  footgun-exec-last-resort.md  footgun-forward-auth-acme-collision.md  footgun-local-template-write-uid.md  footgun-subdomain-needs-public-domain.md  generic-project-standards.md  long-running-process.md  (+9 more)
gatekeeper/: Dockerfile  pyproject.toml
gatekeeper/src/gatekeeper/: config.py  handler.py  push.py
(+1079 files in other folders)
