[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-gatekeeper"
version = "0.1.0"
description = "OSCAR Wyoming-to-Hermes bridge — Wyoming server that drives Whisper/Piper and hands off conversation to Hermes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  "wyoming>=1.5.0",
  "httpx>=0.27",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0",
]

[project.scripts]
gatekeeper = "gatekeeper.__main__:main"

[project.urls]
Homepage = "https://github.com/mdopp/oscar"
Spec = "https://github.com/mdopp/oscar/blob/main/gatekeeper/README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gatekeeper*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
